Change content of subsection 6.4.3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -115,6 +115,23 @@
     urldate = {2025-03-20}
 }
 
+@online{PBFT,
+    title = {{ResilientDB - PBFT Commit Algorithm}},
+    url = {https://blog.resilientdb.com/2021/08/21/PBFT_Commit.html},
+    urldate = {2025-03-31}
+}
+
+@book{BFT-2PC,
+    author  = {{Meng Yu, Peng Liu, Wanyu Zang}},
+    title   = {INTRUSION MASKING FOR DISTRIBUTED ATOMIC OPERATIONS},
+    url    = {https://link.springer.com/content/pdf/10.1007/978-0-387-35691-4_20.pdf},
+
+@online{3PC,
+    title = {{Three Phase Commit Protocol}},
+    url = {https://www.geeksforgeeks.org/three-phase-commit-protocol/},
+    urldate = {2025-03-31}
+}
+
 @online{PostrgreSQL,
     url = {https://www.postgresql.org/docs/},
     urldate = {2020-05-20}
