--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -411,22 +411,57 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Распределенная трехфазная фиксация}
 
-Шаги в распределенной трехфазной фиксации следующие \autocite{FixProtocols}:
-\begin{itemize}
-    \item Этап 1: Шаги такие же, как при распределенной двухфазной фиксации
-    \item Этап 2: Подготовьтесь к фиксации
-    \begin{itemize}
-        \item Контролирующий сайт выдает широковещательное сообщение «Ввод подготовленного состояния»
-        \item Ведомые сайты голосуют «ОК» в ответ
-    \end{itemize}
-    \item Фиксация / Отмена
-\end{itemize}
+Протокол трёхфазной фиксации (3PC) — это расширение протокола двухфазной фиксации (2PC), которое позволяет избежать проблемы блокировки при определённых условиях. В частности, 
+предполагается, что не происходит разделения сети на части и не более k узлов выходят из строя, где «k» — заранее заданное число. При соблюдении упомянутых условий протокол позволяет 
+избежать блокировки за счёт введения дополнительной третьей фазы, в которой в принятии решения о фиксации участвуют несколько узлов.
 
-Этапы аналогичны двухфазной фиксации, за исключением того, что сообщение «Подтвердить ACK» / «Прервать ACK» не требуется
+Вместо того чтобы напрямую сохранять решение о фиксации в постоянном хранилище, координатор сначала гарантирует, что по крайней мере «k» других узлов знают, что он намерен зафиксировать 
+транзакцию.
+
+В ситуации, когда координатор выходит из строя, оставшиеся узлы должны сначала выбрать нового координатора. Этот новый координатор проверяет состояние протокола на оставшихся узлах. 
+Если координатор решил зафиксировать транзакцию, то по крайней мере один из других «k» узлов, о которых он сообщил, будет работать и обеспечит соблюдение решения о фиксации транзакции. 
+Новый координатор перезапускает третью фазу протокола, если какой-либо из оставшихся узлов знал, что старый координатор намеревался зафиксировать транзакцию. В противном случае новый 
+координатор прерывает транзакцию.
+
+При опросе участников, если он обнаруживает, что некоторые узлы находятся на этапе фиксации, он предполагает, что предыдущий координатор перед сбоем принял решение о фиксации.
+Следовательно, он может завершить протокол фиксацией. Аналогичным образом, если участник отвечает, что он не получил команду на подготовку к фиксации, то новый координатор может 
+предположить, что предыдущий координатор потерпел неудачу ещё до того, как начал подготовку к фиксации. Следовательно, он может с уверенностью предположить, что ни один другой участник 
+не зафиксировал изменения, и поэтому он может безопасно прервать транзакцию \autocite{3PC}.
+
+Разницу между трёхфазным и двухфазным протоколами фиксации можно понять по рисункам \ref{2pc} и \ref{3pc}.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/distributed/2PhaseCommit.png}
+    \caption{Протокол двухфазной фиксации}
+    \label{2pc}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/distributed/3PhaseCommit.png}
+    \caption{Протокол трехфазной фиксации}
+    \label{3pc}
+\end{figure}
+
+Таким образом, между фазами запроса на фиксацию и окончательной фиксацией в отличие от 2PC добавляется фаза предварительной фиксации:
+
+\begin{itemize}
+    \item Координатор отправляет всем участникам сообщение \texttt{prepare to commit}
+    \item Участники выполняют все необходимые операции для подготовки к окончательной фиксации
+    \item Участники переходят в состояние "готов к фиксации"
+    \item Каждый участник отправляет координатору подтверждение о готовности (\texttt{ACK})
+\end{itemize}
 
 \subsubsection{Защищенные протоколы фиксации}
 
 \paragraph{Обработка распределенных транзакций в базах данных с многоуровневой секретностью (MLS)}~\\
+
+Для внедрения разграничения доступа в системы  управления  базами  данных  (СУБД  -
+DBMS)  предложены некоторые решения. Однако эти решения не достаточно
+эффективны, поэтому рассмотрим понятие  системы
+управления  базами  данных  с  многоуровневым  разграничением доступа (MLS/DBMS).
+
 Известно, что в MLS/DBMS не ко всем данным, содержащимся в  базе
 данных, доступ осуществляется одинаково. Однако современные СУБД, как
 правило,  не имеют адекватных средств диагностики и механизма определения
