--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1209,3 +1209,14 @@
     title={Oracle Database Reference. Part III Dynamic Performance Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
 }
+
+@online{bdufstec,
+    url={https://bdu.fstec.ru/threat}
+}
+
+@techreport{fstec17,
+  title       = {Приказ ФСТЭК России от 11.02.2013 N 17 (ред. от 28.08.2024) "Об утверждении Требований о защите информации, не составляющей государственную тайну, содержащейся в государственных информационных системах" (Зарегистрировано в Минюсте России 31.05.2013 N 28608)},
+  institution = {ФЕДЕРАЛЬНАЯ СЛУЖБА ПО ТЕХНИЧЕСКОМУ И ЭКСПОРТНОМУ КОНТРОЛЮ (ФСТЭК РОССИИ)},
+  url={https://www.consultant.ru/document/cons_doc_LAW_147084/}
+  year        = {2024}
+}
