Added text: started 3.3.5 "Управление блокировками в СУБД"
Added 1 paragraph to 3.3.5 "Управление блокировками в СУБД"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1199,6 +1199,26 @@
     url={https://www.postgresql.org/docs/current/runtime-config.html}
 }
 
+@online{PostgreSQLlockh1,
+    title={PostgreSQL Source Code. lock.h},
+    url={https://doxygen.postgresql.org/lock_8h_source.html}
+}
+
+@online{PostgreSQLlockh2,
+    title={PostgreSQL Source Code. lock.h File Reference},
+    url={https://doxygen.postgresql.org/lock_8h.html}
+}
+
+@online{PostgreSQLlockc1,
+    title={GitHub PostgreSQL. lock.c},
+    url={https://github.com/postgres/postgres/blob/master/src/backend/storage/lmgr/lock.c}
+}
+
+@online{PostgreSQLlockc2,
+    title={PostgreSQL Source Code. lock.c File Reference},
+    url={https://doxygen.postgresql.org/lock_8c.html}
+}
+
 @online{PgStatStatements1,
     title={PostgreSQL Documentation. Appendix F. F.30.},
     url={https://www.postgresql.org/docs/current/pgstatstatements.html}
