Add subsection{Алгоритмы консенсуса}

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -95,6 +95,30 @@
     isbn    = {5-272-00053-65-272-00053-6}
 }
 
+@article{Fischer1985,
+    author = {M. Fischer and N. Lynch and M. Paterson},
+    journal = {Journal of the ACM, vol. 32, no. 2},
+    year = {1985},
+    title = {Impossibility of Distributed Consensus with One Faulty Process},
+    pages = {374--382}
+}
+
+@article{Brewer2012,
+    author = {E. Brewer},
+    journal = {Computer, vol. 45, no. 2},
+    year = {2012},
+    title = {CAP Twelve Years Later: How the "Rules" Have Changed},
+    pages = {23--29}
+}
+
+@inproceedings{Castro1999,
+    author = {M. Castro and B. Liskov},
+    title = {Practical Byzantine Fault Tolerance},
+    booktitle = {Proceedings of the 3rd Symposium on Operating Systems Design and Implementation (OSDI'99)},
+    year = {1999},
+    pages = {173--186}
+}
+
 @book{Fix,
     author  = {{С. Л. Бабичев, К. А. Коньков}},
     title   = {Распределенные системы : учебник для вузов},
@@ -124,12 +148,19 @@
 @book{BFT-2PC,
     author  = {{Meng Yu, Peng Liu, Wanyu Zang}},
     title   = {INTRUSION MASKING FOR DISTRIBUTED ATOMIC OPERATIONS},
-    url    = {https://link.springer.com/content/pdf/10.1007/978-0-387-35691-4_20.pdf},
+    url    = {https://link.springer.com/content/pdf/10.1007/978-0-387-35691-4_20.pdf}
+}
 
 @online{3PC,
     title = {{Three Phase Commit Protocol}},
     url = {https://www.geeksforgeeks.org/three-phase-commit-protocol/},
     urldate = {2025-03-31}
+}
+
+@online{PoS_PoW,
+    title = {{Алгоритмы Proof of Work и Proof of Stake}},
+    url = {https://fin-plan.org/blog/algoritmy-proof-of-work-pow-i-proof-of-stake-pos},
+    urldate = {2025-04-7}
 }
 
 @online{PostrgreSQL,
@@ -917,7 +948,7 @@
 @online{SecureFix,
 	title = {{Вопросы разграничения доступа к данным в СУБД}},
 	url = {https://koapp.narod.ru/tehlit/base/bd/dbms.htm},
-	urldate = {2024-06-12}
+	urldate = {2024-04-7}
 }
 
 @article{PhysLogPeplic,
