--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -455,6 +455,15 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Защищенные протоколы фиксации}
 
+Некоторые примеры с ссылками на описание проткоолов:
+
+\begin{itemize}
+    \item BFT-2PC \autocite{BFT-2PC}
+    \item PBFT \autocite{PBFT}
+    \item PoW (Proof of Work Commit) \autocite{PoS_PoW}
+    \item PoS (Proof of Stake Commit) \autocite{PoS_PoW}
+\end{itemize}
+
 \paragraph{Обработка распределенных транзакций в базах данных с многоуровневой секретностью (MLS)}~\\
 
 Для внедрения разграничения доступа в системы  управления  базами  данных  (СУБД  -
@@ -483,7 +492,41 @@ DBMS)  предложены некоторые решения. Однако эт
 в том, что вопросы классификации в СУБД значительно  сложнее,  чем  в
 файловых  системах  и могут быть сложнее реализованы. Другая проблема
 состоит в том, что для классификации данных,  содержащих  контекстные
-представления,  временные параметры, их композицию, необходимы унифицированные базы данных \autocite{SecureFix}.
+представления,  временные параметры, их композицию, необходимы унифицированные базы данных 
+
+Подробнее можно почитать в \autocite{SecureFix}.
+
+\subsubsection{Алгоритмы консенсуса}
+
+\paragraph{Проблема консенсуса в распределённых системах}
+
+\textbf{Проблема консенсуса} — фундаментальная задача распределённых систем, требующая согласования общего решения между узлами в условиях возможных сбоев, задержек сообщений или 
+неисправностей участников. Формально, каждый узел системы предлагает своё начальное значение, и все корректные узлы должны прийти к единому решению, удовлетворяющему следующим условиям \autocite{Tanenbaum}: 
+
+\begin{itemize} 
+    \item \textbf{Согласованность (Agreement)}: Все узлы принимают одно и то же значение. 
+    \item \textbf{Целостность (Integrity)}: Решение должно быть предложено хотя бы одним узлом. 
+    \item \textbf{Завершаемость (Termination)}: Каждый корректный узел в конечном итоге принимает решение. 
+\end{itemize}
+
+\paragraph{Теоретические ограничения} 
+
+В распределённых системах достижение консенсуса осложнено теоретическими ограничениями: 
+
+\begin{itemize} 
+    \item \textbf{Теорема FLP} (Фischer, Lynch, Paterson, 1985): В асинхронной системе с хотя бы одним отказом узла консенсус невозможен, если возможна произвольная задержка сообщений \autocite{Fischer1985}. 
+    \item \textbf{CAP-теорема} (Brewer, 2000): Система может гарантировать только два из трёх свойств: согласованность (Consistency), доступность (Availability), устойчивость к разделению (Partition tolerance) \autocite{Brewer2012}. 
+\end{itemize}
+
+\paragraph{Типы отказов} 
+
+Алгоритмы консенсуса классифицируются по типу отказов, которые они могут преодолеть: 
+
+\begin{itemize} 
+    \item \textbf{Аварийные отказы (Crash faults)}: Узел перестаёт отвечать, но не действует злонамеренно. 
+    \item \textbf{Византийские отказы (Byzantine faults)}: Узел может произвольно искажать данные или нарушать протокол \autocite{Castro1999}. 
+\end{itemize}
+
 
 \subsection{Тиражирование данных}
 
