Literature sources have been corrected

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -64,6 +64,8 @@
 }
 
 @online{DDBMSIndusEdition,
+    author  = {{tutorialspoint}},
+    title   = {{Distributed DBMS - Distributed Databases}},
     url     = {https://www.tutorialspoint.com/distributed_dbms/distributed_dbms_databases.htm},
     urldate = {2025-03-15}
 }z
@@ -77,6 +79,8 @@
 }
 
 @online{dce,
+    author  = {{IBM}},
+    title   = {{What is DCE?}},
     url     = {https://www.ibm.com/docs/en/cics-ts/5.3?topic=SSGMCP_5.3.0/com.ibm.cics.ts.doc/dfhtm/topics/dfhtm0a.html},
     urldate = {2025-03-15}
 }
@@ -89,7 +93,7 @@
 }
 
 @book{Tanenbaum,
-    author  = {{Таненбаум Э., Стеен М.}},
+    author  = {{Таненбаум Э. and Стеен М.}},
     title   = {Распределенные системы. Принципы и парадигмы},
     year    = {2003},
     isbn    = {5-272-00053-65-272-00053-6}
@@ -948,7 +952,7 @@
 @online{SecureFix,
 	title = {{Вопросы разграничения доступа к данным в СУБД}},
 	url = {https://koapp.narod.ru/tehlit/base/bd/dbms.htm},
-	urldate = {2024-04-7}
+	urldate = {2025-04-7}
 }
 
 @article{PhysLogPeplic,
