--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -186,11 +186,11 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \paragraph{Механизмы противодействия угрозам конфиденциальности:}
 
-Особенности распределенных систем требуют дополнительных механизмов защиты передаваемых данных:
+Особенности распределенных систем требуют дополнительных механизмов защиты передаваемых данных \autocite{Tanenbaum}:
 
 \begin{itemize} 
     \item \textbf{Криптографическая защита сетевых каналов} — защита целостности и конфиденциальности сообщений между узлами организуется с помощью шифрования каналов (например TLS) и протоколов взаимной аутентификации узлов.
-    \item \textbf{Автоматическая взаимная аутентификация узлов} — средства идентификации и аутентификации, обеспечивающие автоматическую проверку подлинности узлов и исключающие возможность подмены серверов \cite{Karpova2009}.
+    \item \textbf{Автоматическая взаимная аутентификация узлов} — средства идентификации и аутентификации, обеспечивающие автоматическую проверку подлинности узлов и исключающие возможность подмены серверов.
     \item \textbf{Изоляция критичных компонент распределенного приложения} — сегментирование сети, ограничение сетевого доступа к узлам, обработка конфиденциальных операций на узлах с ограниченным кругом доступа пользователей и приложений.
 \end{itemize}
 
@@ -993,7 +993,7 @@ CRDT обладают следующими характеристиками:
 
 \paragraph{Современные тенденции}
 
-аключаются в том, чтоб забыть о физических машинках и виртуалках, завернуть сервисы в контейнеры и перенести их в облако. Это позволяет разработчикам и компаниям быть более гибкими, 
+Заключаются в том, чтоб забыть о физических машинках и виртуалках, завернуть сервисы в контейнеры и перенести их в облако. Это позволяет разработчикам и компаниям быть более гибкими, 
 упрощает разработку, тестирование и масштабирование приложений.
 
 \subsubsection{Контейнеризация}
