--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -125,10 +125,10 @@ DCE (Distributed Computing Environment)~--- это система програм
 \subsection{Угрозы безопасности распределенных СУБД}
 
 \subsubsection{Угрозы доступности, целостности, конфиденциальности данных}
-Распределенные системы управления базами данных (СУРБД) отличаются от централизованных тем, что их работа организована на множестве удаленных узлов, 
+Распределенные системы управления базами данных отличаются от централизованных тем, что их работа организована на множестве удаленных узлов, 
 связанных между собой сетью. Такой подход обеспечивает расширение и масштабируемость сервисов, однако порождает специфичные угрозы доступности, 
 целостности и конфиденциальности информации. В этом разделе рассмотрим наиболее характерные угрозы, обусловленные именно распределенностью СУБД, 
-так как общие угрозы целостности и конфиденциальности СУБД были рассмотрены в 3 "Механизмы обеспечения целостности СУБД" и 4 "Механизмы обеспечения конфиденциальности в СУБД"  разделах соответственно, а также в подразделе 1.2 "Угрозы безопасности БД: общие и специфичные". \autocite{Tanenbaum}.
+так как общие угрозы целостности и конфиденциальности СУБД были рассмотрены в 3 "Механизмы обеспечения целостности СУБД" и 4 "Механизмы обеспечения конфиденциальности в СУБД"  разделах соответственно, а также в подразделе 1.2 "Угрозы безопасности БД: общие и специфичные".
 
 \paragraph{Угрозы доступности:}
 
