--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -32,7 +32,7 @@
 \begin{itemize} 
     \item \textbf{Двухзвенная модель} — разделение функций между двумя узлами. 
     \item \textbf{Трехзвенная модель} — выделение для каждого из трех компонентов приложения своего сервера. 
-    \item \textbf{Многозвенная модель} — распределение функциональных компонентов по нескольким серверам и узлам сети. \autocite{Tanenbaum}
+    \item \textbf{Многозвенная модель} — распределение функциональных компонентов по нескольким серверам и узлам сети. \autocite[с.75-78]{Tanenbaum} 
 \end{itemize}
 
 \textbf{Двухзвенная структура}~\\
@@ -138,6 +138,8 @@ DCE (Distributed Computing Environment)~--- это система програм
     \item \textbf{Отказ сетевых соединений.} Нарушения коммуникационных каналов между серверами могут привести к недоступности данных для части пользователей, даже если сами узлы продолжат корректно функционировать\autocite{Karpova2009}.
     \item \textbf{Недоступность отдельных узлов и реплик данных.} При отказе отдельных серверов становятся недоступными большие сегменты распределенной базы данных или могут нарушаться процессы репликации и синхронизации данных \autocite{Tanenbaum}. 
     \item \textbf{Эффекты каскадных отказов.} Распределенные транзакции при некорректной реализации процедур завершения могут приводить к каскадным простоям ряда узлов вследствие накопления ожиданий завершения транзакций или блокировок ресурсов \autocite{IntroBD2014}. 
+    \item \textbf{Высокие требования к скорости канала (сети) между сервером базы данных и серверами приложений.}
+\end{itemize}
 \end{itemize}
 
 \paragraph{Угрозы целостности:}
@@ -161,7 +163,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Механизмы противодействия угрозам}
 
-Для защиты распределенных систем управления базами данных от специфических угроз, перечисленных ранее в подразделе Угрозы доступности, целостности и конфиденциальности данных, применяются специализированные механизмы, обусловленные особенностями распределенного хранения данных и передачи информации по сети.
+Для защиты распределенных систем управления базами данных от специфических угроз, перечисленных ранее в подразделе "Угрозы доступности, целостности и конфиденциальности данных", применяются специализированные механизмы, обусловленные особенностями распределенного хранения данных и передачи информации по сети.
 
 \paragraph{Механизмы противодействия угрозам доступности:}
 
