--- a/bibliography.bib
+++ b/bibliography.bib
@@ -93,7 +93,7 @@
 }
 
 @book{Tanenbaum,
-    author  = {{Таненбаум Э. and Стеен М.}},
+    author  = {Таненбаум Э. and Стеен М.},
     title   = {Распределенные системы. Принципы и парадигмы},
     year    = {2003},
     isbn    = {5-272-00053-65-272-00053-6}
