fixing hythe7 urls info

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1167,97 +1167,116 @@
 
 @online{PostgreSQLdocc52,
     title={PostgreSQL Documentation. Chapter 52. System views},
-    url={https://www.postgresql.org/docs/current/views.html}
+    url={https://www.postgresql.org/docs/current/views.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc3p4,
     title={PostgreSQL Documentation. Chapter 3. Advanced Features. P.3.4. Transactions},
-    url={https://www.postgresql.org/docs/current/tutorial-transactions.html}
+    url={https://www.postgresql.org/docs/current/tutorial-transactions.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc27,
     title={PostgreSQL Documentation. Chapter 27. Monitoring Database Activity},
-    url={https://www.postgresql.org/docs/current/monitoring.html}
+    url={https://www.postgresql.org/docs/current/monitoring.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc28,
     title={PostgreSQL Documentation. Chapter 28. Reliability and the Write-Ahead Log. Part III. Server Administration},
-    url={https://www.postgresql.org/docs/current/wal.html}
+    url={https://www.postgresql.org/docs/current/wal.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc65,
     title={PostgreSQL Documentation. Chapter 65. Database Physical Storage},
-    url={https://www.postgresql.org/docs/current/storage.html}
+    url={https://www.postgresql.org/docs/current/storage.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc13,
     title={PostgreSQL Documentation. Chapter 13. Concurrency Control},
-    url={https://www.postgresql.org/docs/current/mvcc.html}
+    url={https://www.postgresql.org/docs/current/mvcc.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLdocc19,
     title={PostgreSQL Documentation. Chapter 19. Server Configuration},
-    url={https://www.postgresql.org/docs/current/runtime-config.html}
+    url={https://www.postgresql.org/docs/current/runtime-config.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLlockh1,
     title={PostgreSQL Source Code. lock.h},
-    url={https://doxygen.postgresql.org/lock_8h_source.html}
+    url={https://doxygen.postgresql.org/lock_8h_source.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLlockh2,
     title={PostgreSQL Source Code. lock.h File Reference},
-    url={https://doxygen.postgresql.org/lock_8h.html}
+    url={https://doxygen.postgresql.org/lock_8h.html},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLlockc1,
     title={GitHub PostgreSQL. lock.c},
-    url={https://github.com/postgres/postgres/blob/master/src/backend/storage/lmgr/lock.c}
+    url={https://github.com/postgres/postgres/blob/master/src/backend/storage/lmgr/lock.c},
+		note={commit: 51a0382e8d8793b5cc89b69285e5ecdffe03c2bf}
 }
 
 @online{PostgreSQLlockc2,
     title={PostgreSQL Source Code. lock.c File Reference},
-    url={https://doxygen.postgresql.org/lock_8c.html}
+    url={https://doxygen.postgresql.org/lock_8c.html},
+		urldate={2025-04-21}
 }
 
 @online{PgStatStatements1,
     title={PostgreSQL Documentation. Appendix F. F.30.},
-    url={https://www.postgresql.org/docs/current/pgstatstatements.html}
+    url={https://www.postgresql.org/docs/current/pgstatstatements.html},
+		urldate={2025-04-21}
 }
 
 @online{PgReference1,
     title={PostgreSQL Documentation. Reference. SQL Commands},
-    url={https://www.postgresql.org/docs/current/sql-commands.html}
+    url={https://www.postgresql.org/docs/current/sql-commands.html},
+		urldate={2025-04-21}
 }
 
 @online{HabrDataOrgp1,
     title={PostgreSQL 16. Организация данных. Часть 1},
-    url={https://habr.com/ru/articles/813781/}
+    url={https://habr.com/ru/articles/813781/},
+		urldate={2025-04-21}
 }
 
 @online{Mysqldoc1,
     title={MySQL 8.0 Reference Manual. Chapter 28},
-    url={https://dev.mysql.com/doc/refman/8.0/en/information-schema.html}
+    url={https://dev.mysql.com/doc/refman/8.0/en/information-schema.html},
+		urldate={2025-04-21}
 }
 
 @online{Mysqldoc2,
     title={MySQL 8.0 Reference Manual. Chapter 29},
-    url={https://dev.mysql.com/doc/refman/8.0/en/performance-schema.html}
+    url={https://dev.mysql.com/doc/refman/8.0/en/performance-schema.html},
+		urldate={2025-04-21}
 }
 
 @online{Mysqldoc3,
     title={MySQL 8.0 Reference Manual. MySQL Server Logs},
-    url={https://dev.mysql.com/doc/refman/8.0/en/binary-log.html}
+    url={https://dev.mysql.com/doc/refman/8.0/en/binary-log.html},
+		urldate={2025-04-21}
 }
 
 @online{Mysqldoc4,
     title={MySQL 8.0 Reference Manual. Chapter 17},
-    url={https://dev.mysql.com/doc/refman/8.0/en/innodb-storage-engine.html}
+    url={https://dev.mysql.com/doc/refman/8.0/en/innodb-storage-engine.html},
+		urldate={2025-04-21}
 }
 
 @online{Mysqldoc5,
     title={MySQL 8.0 Reference Manual. Chapter 15},
-    url={https://dev.mysql.com/doc/refman/8.0/en/sql-statements.html}
+    url={https://dev.mysql.com/doc/refman/8.0/en/sql-statements.html},
+		urldate={2025-04-21}
 }
 
 @online{YTcoursepostgre,
@@ -1272,7 +1291,8 @@
 
 @online{IntuitThreats,
     title={Основы информационной безопасности. Лекция 3: Наиболее распространенные угрозы},
-    url={https://intuit.ru/studies/courses/10/10/lecture/300}
+    url={https://intuit.ru/studies/courses/10/10/lecture/300},
+		urldate={2025-04-21}
 }
 
 @online{HabrTsql,
