--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1391,7 +1391,8 @@
 }
 
 @online{bdufstec,
-    url={https://bdu.fstec.ru/threat}
+    url={https://bdu.fstec.ru/threat},
+    year = 2025
 }
 
 @techreport{fstec17,
@@ -1453,3 +1454,46 @@
 	year={1988},
 	publisher={IEEE}
 }
+
+@article{RT-SOLAR-conf,
+	title={Угрозы конфиденциальной информации},
+	year={2025},
+	publisher={RT-SOLAR},
+	url = {https://rt-solar.ru/products/solar_dozor/blog/3046/}
+}
+
+@article{ Microsoft-TDE,
+	title={Transparent data encryption (TDE)},
+	year={2025},
+	publisher={Microsoft},
+	url = {https://learn.microsoft.com/en-us/sql/relational-databases/security/encryption/transparent-data-encryption?view=sql-server-ver16}
+}
+
+@article{ Oracle-TDE,
+	title={Introduction to Transparent Data Encryption},
+	year={2025},
+	publisher={Oracle},
+	url = {https://docs.oracle.com/en/database/oracle/oracle-database/19/asoag/introduction-to-transparent-data-encryption.html#GUID-62AA9447-FDCD-4A4C-B563-32DE04D55952}
+}
+
+@article{ IBM-CLE,
+	title={Column-level encryption},
+	year={2025},
+	publisher={IBM},
+	url = {https://www.ibm.com/docs/en/informix-servers/12.10.0?topic=data-column-level-encryption}
+}
+
+@article{ CryptDB,
+	title={CryptDB: обработка информации в БД без её дешифрования},
+	year={2025},
+	url = {https://habr.com/ru/articles/134966/}
+}
+
+@article{ MIT-CryptDB,
+	title={https://css.csail.mit.edu/cryptdb/},
+	year={2025},
+	url = {https://css.csail.mit.edu/cryptdb/}
+}
+
+
+
