--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1211,7 +1211,7 @@
 
 @article{ASDViews,
 	title={ASDViews (relational databases)},
-	author={{C. Garvey, A. Wu}},
+	author={C. Garvey and A. Wu},
 	journal={Proceedings. 1988 IEEE Symposium on Security and Privacy},
 	year={1988},
 	publisher={IEEE}
