--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1490,9 +1490,15 @@
 }
 
 @article{ MIT-CryptDB,
-	title={https://css.csail.mit.edu/cryptdb/},
+	title={cryptdb},
 	year={2025},
 	url = {https://css.csail.mit.edu/cryptdb/}
+}
+
+@article{ MIT-CryptDB,
+	title={Data Encryption},
+	year={2025},
+	url = {https://www.imperva.com/learn/data-security/data-encryption/}
 }
 
 
