--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1495,7 +1495,7 @@
 	url = {https://css.csail.mit.edu/cryptdb/}
 }
 
-@article{ MIT-CryptDB,
+@article{ DB-ENC,
 	title={Data Encryption},
 	year={2025},
 	url = {https://www.imperva.com/learn/data-security/data-encryption/}
