--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1501,5 +1501,19 @@
 	url = {https://www.imperva.com/learn/data-security/data-encryption/}
 }
 
+@article{ SEE,
+	title={How To Compile And Use SEE},
+	year={2025},
+	url = {https://www.sqlite.org/see/doc/trunk/www/readme.wiki}
+}
+
+@article{ SQLCipher-auth,
+	title={Security Design},
+	year={2025},
+	url = {https://www.zetetic.net/sqlcipher/design/}
+}
+
+
+
 
 
