--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -571,27 +571,27 @@ SQL Server 2016 реализует шифрование на стороне кл
 идентификация это выделение обьекта и установление для него отличительного набора параметров или
 характеристик. Например для идентификации пользо- вателя это наличие идентифицирующей его
 информации, на основе которой можно однозначно выделить его среди остальных: никнейм (псевдоним),
-электронная почта, ФИО, СНИЛС и т.п.
+электронная почта, ФИО, СНИЛС и т.п.\cite{crypto-methods}
 
 \textbf{Аутентификация} – это процедура проверки подлинности входящего в систему обьекта(пользователя),
 предьявившего свой идентификатор. При проведении аутентификации проверющая сторона удостоверяется в подлинности
-проверяемой стороны, однако, проверяемая сторона также учавствует в процессе обмена нформацией.
+проверяемой стороны, однако, проверяемая сторона также учавствует в процессе обмена нформацией\cite{crypto-methods}:.
 
 \textbf{Аутентификация} и \textbf{Идентификация} являются взаимосвязанными процессами для определения и проверки
 подлинности пользователей системы. Именно от них зависит дальнейшее решение системы о том, какие
 действия следует предпринимать для предоставления ресурсов пользователю. Следует уточнить, что
-решение о предоставлении доступа зависит от используемой информационной системы.
+решение о предоставлении доступа зависит от используемой информационной системы\cite{crypto-methods}:.
 
 Также стоит ввести понятие \textbf{строгой аутентификации}. Идея \textbf{строгой аутентификации}
 заключается в том, что проверяемая сторона доказывает свою подлинность проверяющей стороне на
 основе какого-либо секрета, который предварительно был размещен на обеих сторонах. Совместное
-применение средств идентификации и аутентификации, встроенных в СУБД и в ОС.
+применение средств идентификации и аутентификации, встроенных в СУБД и в ОС \cite{crypto-methods}:.
 
 Основополагающим является тот факт, что проверяемая сторона не передает свой секрет, аутентификация
 обеспечивается ответами доказывающей стороны на сгенерированные вопросы проверяющей стороны.
 
 В соответствии с рекомендациями стандарта Х.509 различают процедуры строгой аутентификации
-следующих типов:
+следующих типов\cite{crypto-methods}::
 \begin{itemize}
     \item односторонняя аутентификация. Предусматривает обмен информацией только в одном направлении
     \item двусторонняя аутентификация. Содержит дополнительный ответ проверяющей стороны,
@@ -680,6 +680,8 @@ SQL Server 2016 реализует шифрование на стороне кл
 При удалённой аутентификации по сети последние версии Windows используют протокол Kerberos, который
 обеспечивает взаимную аутентификацию, и, только если аутентификация по Kerberos не поддерживается
 клиентом или сервером, она происходит по NTLMv2 \cite{crypto-methods}.
+
+В некоторых СУБД, например, в SQLite нет встроенных механзимов идентифиакции и контроля доступа. В случае с SQLite можно использовать внешние механзимы идентифиакции и аутентификации. При этом SQLite имеет официальное расширение SQLite Encryption Extension (SEE), которое добавляет поддержку шифрования базы с паролем, что можно использовать как форму простой "аутентификации" — без правильного ключа БД не откроется \cite{SEE}. Примером стороннего расширения может быть SQLCipher\cite{SQLCipher-auth}, в котором механизм аутентификации также обеспечивается через предоставление ключа шифрования.
 
 
 \subsection{Средства управления доступом}
