--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -777,7 +777,7 @@ SQL Server 2016 реализует шифрование на стороне кл
 \begin{itemize}
     \item \textbf{Дискреционная модель управления доступом} (Discretionary Access Control - \textbf{DAC}) -
         архитектура, ограничивающая доступ к  ресурсам в зависимости от атрибутов субъектов или
-        группы, к которой они принадлежат. Эти атрибуты определяют права доступа к ресурсам
+        группы, к которой они принадлежат. Иногда соотношения между атрибутами, ресурасми и субъектами изображают в виде матрицы доступа. Атрибуты определяют права доступа к ресурсам
         файловой системы, например: чтение (Read), запись (Write) и исполнение (eXecute).
         В UNIX-подобных системах эти атрибуты распространяются на три категории пользователей:
         пользователь (owner), группа (group), остальные (other). Категория владелец относится
@@ -795,6 +795,10 @@ SQL Server 2016 реализует шифрование на стороне кл
         \end{itemize}
         В UNIX-подобных системах эта система используется по умолчанию (хорошо известный всем
         -rwxrwxrwx, chmod и прочее).
+        \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/Матрица_доступа.png}
+\end{figure}
     \item \textbf{Мандатная модель управления доступом} (Mandatory Access Control - \textbf{MAC}) -
         архитектура, предполагающая централизованный контроль
         над правилами политики доступа, при котором рядовые пользователи не имеют возможность
