Исправление орфографии главы 3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1222,7 +1222,8 @@
 @online{PostgreSQLlockc1,
     title={GitHub PostgreSQL. lock.c},
     url={https://github.com/postgres/postgres/blob/master/src/backend/storage/lmgr/lock.c},
-		note={commit: 51a0382e8d8793b5cc89b69285e5ecdffe03c2bf}
+		note={commit: 51a0382e8d8793b5cc89b69285e5ecdffe03c2bf},
+		urldate={2025-04-21}
 }
 
 @online{PostgreSQLlockc2,
