--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1392,7 +1392,8 @@
 
 @online{bdufstec,
     url={https://bdu.fstec.ru/threat},
-    year = 2025
+    year = 2025,
+    urldate = {2025-04-29}
 }
 
 @techreport{fstec17,
@@ -1459,58 +1460,67 @@
 	title={Угрозы конфиденциальной информации},
 	year={2025},
 	publisher={RT-SOLAR},
-	url = {https://rt-solar.ru/products/solar_dozor/blog/3046/}
+	url = {https://rt-solar.ru/products/solar_dozor/blog/3046/},
+	urldate = {2024-04-29}
 }
 
 @article{ Microsoft-TDE,
 	title={Transparent data encryption (TDE)},
-	year={2025},
+	year={2024},
 	publisher={Microsoft},
-	url = {https://learn.microsoft.com/en-us/sql/relational-databases/security/encryption/transparent-data-encryption?view=sql-server-ver16}
+	url = {https://learn.microsoft.com/en-us/sql/relational-databases/security/encryption/transparent-data-encryption?view=sql-server-ver16},
+	urldate = {2025-04-29}
 }
 
 @article{ Oracle-TDE,
 	title={Introduction to Transparent Data Encryption},
 	year={2025},
 	publisher={Oracle},
-	url = {https://docs.oracle.com/en/database/oracle/oracle-database/19/asoag/introduction-to-transparent-data-encryption.html#GUID-62AA9447-FDCD-4A4C-B563-32DE04D55952}
+	url = {https://docs.oracle.com/en/database/oracle/oracle-database/19/asoag/introduction-to-transparent-data-encryption.html#GUID-62AA9447-FDCD-4A4C-B563-32DE04D55952},
+	urldate = {2025-04-29}
 }
 
 @article{ IBM-CLE,
 	title={Column-level encryption},
 	year={2025},
 	publisher={IBM},
-	url = {https://www.ibm.com/docs/en/informix-servers/12.10.0?topic=data-column-level-encryption}
+	url = {https://www.ibm.com/docs/en/informix-servers/12.10.0?topic=data-column-level-encryption},
+	urldate = {2025-04-29}
 }
 
 @article{ CryptDB,
 	title={CryptDB: обработка информации в БД без её дешифрования},
-	year={2025},
-	url = {https://habr.com/ru/articles/134966/}
+	year={2011},
+	url = {https://habr.com/ru/articles/134966/},
+	urldate = {2025-04-29}
 }
 
 @article{ MIT-CryptDB,
 	title={cryptdb},
 	year={2025},
-	url = {https://css.csail.mit.edu/cryptdb/}
+	url = {https://css.csail.mit.edu/cryptdb/},
+	urldate = {2025-04-29}
 }
 
 @article{ DB-ENC,
 	title={Data Encryption},
 	year={2025},
-	url = {https://www.imperva.com/learn/data-security/data-encryption/}
+	url = {https://www.imperva.com/learn/data-security/data-encryption/},
+	urldate = {2025-04-29}
 }
 
 @article{ SEE,
 	title={How To Compile And Use SEE},
 	year={2025},
-	url = {https://www.sqlite.org/see/doc/trunk/www/readme.wiki}
+	url = {https://www.sqlite.org/see/doc/trunk/www/readme.wiki},
+	urldate = {2025-04-29}
 }
 
 @article{ SQLCipher-auth,
 	title={Security Design},
 	year={2025},
-	url = {https://www.zetetic.net/sqlcipher/design/}
+	url = {https://www.zetetic.net/sqlcipher/design/},
+	urldate = {2025-04-29}
 }
 
 
