--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1523,6 +1523,15 @@
 	urldate = {2025-04-29}
 }
 
+@article{ Sintara,
+	title={A practical approach to high assurance multilevel secure computing service},
+	year={1995},
+	url = {https://www.researchgate.net/publication/3593873_A_practical_approach_to_high_assurance_multilevel_secure_computing_service},
+	urldate = {2025-04-29},
+	doi = {10.1109/CSAC.1994.367324}
+	
+}
+
 
 
 
