--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -1,5 +1,5 @@
 \subsection{Модели безопасности в СУБД}
-
+\label{subsec:security_models}
 Сегодня существует большое число различных теоретических моделей, которые позволяют описать практически все аспекты безопасности и обеспечивают средства защиты информации формально подтверждённой алгоритмической базой. Однако на практике воспользоваться результатами данных исследований не всегда удается, потому что слишком часто теория защиты информации не согласуется с реальной жизнью. Дело в том, что теоретические исследования в области защиты информационных систем носит разрозненный характер и не составляет комплексной теории. Существующие технические разработки основаны на различных подходах к проблеме, поэтому методы её решения существенно различаются. Наибольшее развитие получили два подхода --- это формальное моделирования политики безопасности и криптография. Эти различные по происхождению и решаемым задачам подходы взаимно дополняют друг друга. В отличии от криптографии, формальные модели безопасности предоставляют разработчикам защищенных систем принципы, которые лежат в основе архитектуры защищенной системы и определяют концепцию её построения.
 
 Под \textit{политикой безопасности} понимается совокупность норм и правил, определяющих меры по обеспечению безопасности даанных, обрабатываемых в информационной системе.  Для реализации политики безопасности, сформулированной в терминах естест­венного языка, необходимо представить ее формальное выражение.  Его называют \textbf{модель политики безопасности} (или просто \textbf{модель безопасности}).
