--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -781,48 +781,7 @@ SQL Server 2016 реализует шифрование на стороне кл
 соответствующим файлам и томам. Это может быть достигнуто с помощью применения механизмов
 управления доступом в ОС.
 
-Существует несколько моделей управления доступом, которые используются в современных системах:
-\begin{itemize}
-    \item \textbf{Дискреционная модель управления доступом} (Discretionary Access Control - \textbf{DAC}) -
-        архитектура, ограничивающая доступ к  ресурсам в зависимости от атрибутов субъектов или
-        группы, к которой они принадлежат. Иногда соотношения между атрибутами, ресурасми и субъектами изображают в виде матрицы доступа (\ref{fig:matrix-1}). Атрибуты определяют права доступа к ресурсам
-        файловой системы, например: чтение (Read), запись (Write) и исполнение (eXecute).
-        В UNIX-подобных системах эти атрибуты распространяются на три категории пользователей:
-        пользователь (owner), группа (group), остальные (other). Категория владелец относится
-        к одному единственному пользователю ОС, в то время как группа может содержать множество
-        пользователей ОС. В категорию остальные входят те пользователи, которые не принадлежат
-        к первым двум.
-        DAC модель дает владельцу ресурса право определять тип доступа для указанных категорий
-        пользователей. Такое разграничение доступов подходит для защиты от непреднамеренных
-        действий пользователей и позволяет ответить на следующие вопросы:
-        \begin{itemize}
-            \item Какие ресурсы ФС доступны данному пользователю ОС для чтения, записи и исполнения?
-            \item Какие ресурсы ФС доступны данной группе для чтения, записи и исполнения?
-            \item Какие ресурсы ФС доступны остальным пользователям для чтения, записи и исполнения?
-                Для UNIX-систем целесообразно предоставить право непосредственного
-        \end{itemize}
-        В UNIX-подобных системах эта система используется по умолчанию (хорошо известный всем
-        -rwxrwxrwx, chmod и прочее).
-        \begin{figure}[h]
-    \centering
-    \includegraphics[width=0.8\textwidth]{assets/Матрица_доступа.png}
-                \caption{Матрица доступа}
-    \label{fig:matrix-1}
-\end{figure}
-    \item \textbf{Мандатная модель управления доступом} (Mandatory Access Control - \textbf{MAC}) -
-        архитектура, предполагающая централизованный контроль
-        над правилами политики доступа, при котором рядовые пользователи не имеют возможность
-        вносить в них какие-либо изменения. Разработчик политики определяет, какие программы или
-        процессы могут выполнять определенные действия с системными ресурсами. MAC фокусируется в
-        большей степени на программах, нежели на пользователях и решает задачу разграничения
-        доступа процессов к ресурсам ОС.
-        В сущности дизайн MAC старается копировать разграничение привилегий доступа к документации
-        в физическом мире. Если некий сотрудник имеет права читать документы с грифом
-        «совершенно секретно», то к стандартным конфиденциальным и внутренним документам
-        он тоже имеет доступ. Обратное  не верно. То же самое имеет место в контексте привилегий
-        доступа процессов ОС в архитектуре MAC. Так, если программа может читать файл /etc/sudoers,
-        то доступ к /etc/hosts у нее тоже имеется, но обратное неверно.
-\end{itemize}
+Основные модели разграничения доступа, мандатная(MAC) и дискреционная(DAC) были описаны в разделе \ref{subsec:security_models}:
 
 С помощью реализации DAC в UNIX-подобной системе целесообразно предоставить право непосредственного доступа
 только пользователям root, ingres и, быть может, администраторам баз данных. Все прочие
