--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -221,7 +221,7 @@
         в какой мере в каждом варианте политики безопасности буду проявляться побочные негативные
         факторы. Как правило, администратору приходится идти на компромисс, смиряясь либо с
         недостаточной защищённостью операционной системы от отдельных угроз, либо с определёнными
-        трудностями пользователей при работе системой. Результатом данного этапа является набор
+        трудностями пользователей при работе  с системой. Результатом данного этапа является набор
         требований наподобие: "В операционной системе должно быть предусмотрено дискреционное
         разграничение доступа с минимизацией полномочий пользователей и частичной реализацией правил
         изолированной программной среды".
